# exa-haystack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/testing-exa-haystack/: SKILL.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
src/haystack_integrations/components/websearch/exa/: __init__.py  answer.py  contents.py  errors.py  find_similar.py  research.py  search.py
tests/: test_exa.py
